--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Beego</title>
+    <meta charset="utf-8">
+    <title>微信运动统计</title>
+    <script src="echarts.js"></script>
+    <script src="jquery-3.4.1.js"></script>
 </head>
+
 <body>
-    <p>
-        I am Beego.
-    </p>
+    <div id="main" style="width: auto;height: 500px;"></div>
 </body>
+
+<script src="charts.js"></script>
+
 </html>
