--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="main" style="width: auto;height: 500px;"></div>
+    <div id="main" style="width: auto;height: 500px;position: relative;"></div>
 </body>
 
 <script src="charts.js"></script>
