--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,17 @@
 
 <body>
     <div id="main" style="width: auto;height: 500px;position: relative;"></div>
+    <div style="width: auto;height: 500px;position: relative;">
+        <select id='selectName'>
+            <option>117503445</option>
+            <option>胡博</option>
+            <option>罗肖怡</option>
+            <option>冯凯迪</option>
+        </select>
+        <button onclick="search();">
+            刷新
+        </button>
+    </div>
 </body>
 
 <script src="charts.js"></script>
