--- a/static/index.html
+++ b/static/index.html
@@ -4,19 +4,18 @@
 <head>
     <meta charset="utf-8">
     <title>微信运动统计</title>
-    <script src="echarts.js"></script>
-    <script src="jquery-3.4.1.js"></script>
+    <script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/echarts.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment.js"></script>
 </head>
 
 <body>
-    <div id="main" style="width: auto;height: 500px;position: relative;"></div>
+    <div id="main_chart" style="width: auto;height: 500px;position: relative;"></div>
     <div style="width: auto;height: 500px;position: relative;">
         <select id='selectName'>
-            <option>117503445</option>
-            <option>胡博</option>
-            <option>罗肖怡</option>
-            <option>冯凯迪</option>
+
         </select>
+        <input id="datepicker" type="date">
         <button onclick="search();">
             刷新
         </button>
