--- a/static/index.html
+++ b/static/index.html
@@ -7,13 +7,13 @@
     <script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/echarts.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment.js"></script>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body>
-    <div id="main_chart" style="width: auto;height: 500px;position: relative;"></div>
-    <div style="width: auto;height: 500px;position: relative;">
+    <div id="main_chart"></div>
+    <div>
         <select id='selectName'>
-
         </select>
         <input id="datepicker" type="date">
         <button onclick="search();">
